basic navigation wrapper

--- a/pages/blog/2022-11-05-stanford-waterloo.mdx
+++ b/pages/blog/2022-11-05-stanford-waterloo.mdx
@@ -33,7 +33,7 @@ Waterloo as we know it is mostly a vocational school. Most of the students come 
 
 At Waterloo I've kind of gotten used to not expecting much from my instructors. Some of them are quite engaging, but for most of my classes I get the feeling that the instructor is simply reading the slides, kind of like a worse version of a Coursera video where you can't 2x the speed. The result is that I end up skipping classes and self-studying the slides and textbook on my own. Most casses are large (>100 people) and the focus is on measurables and deliverables, making it feel like I'm the product of an industrial credential factory.
 
-The bar at Stanford is on another level - which kind of makes sense given that you pay 80k a year versus my 15k/yr Waterloo tuition. Some of the classes like Arthist 1B: *How to Look at Art and Why* truly make you appreciate good teaching. You get the feeling that the lecturers truly care about teaching you their craft, that they **enjoy** what they do and are very good at it. I was in a few lectures that were so captivating and inspiring that when they ended the class gave a round of applause to the professor. I'm not sure about the specific ratio but a significant chunk of the lecturers are at the top of their field - nobel laureats, Pulitzer prize winners, flagship researchers befitting the Stanford brand. Class sizes range from a dozen people to the hundreds, but the majority of them are small (<50 people). You feel like an actively participating student, where your presence is valued and your questions are welcomed. The result is that I actually look forward to going to class, and I'm not the only one - it's cool to hear about how much my Stanford friends look forward to their favorite classes.
+The bar at Stanford is on another level - which kind of makes sense given that you pay 80k a year versus my 15k/yr Waterloo tuition. Some of the classes like Arthist 1B: *How to Look at Art and Why* truly make you appreciate good teaching. You get the feeling that the lecturers truly care about teaching you their craft, that they **enjoy** what they do and are very good at it. I was in a few lectures that were so captivating and inspiring that when they ended the class gave a round of applause to the professor. I'm not sure about the specific ratio but a significant chunk of the lecturers are at the top of their field - nobel laureats, Pulitzer prize winners, flagship researchers befitting the Stanford brand. Class sizes range from a dozen people to the hundreds, but the majority of them are small (\<50 people). You feel like an actively participating student, where your presence is valued and your questions are welcomed. The result is that I actually look forward to going to class, and I'm not the only one - it's cool to hear about how much my Stanford friends look forward to their favorite classes.
 
 ### Mindsets
 
