--- a/pages/blog/2021-04-28-group-houses.mdx
+++ b/pages/blog/2021-04-28-group-houses.mdx
@@ -13,23 +13,23 @@ export const metadata = {
 
 ![Cover](/images/2021-04-28-group-houses/cover.jpg)
 
-Recently, there's been a lot of talk about living in group houses. By definition, they aren't anything new or complicated by any means. These co-living arrangements are just that - a group of people live together under one roof. Like geodes, they come in different arrangements and sizes, and there's something out there for everyone.
+Recently, there's been a lot of talk about living in group houses. These co-living arrangements are just that - a group of people live together under one roof. Like geodes, they come in different arrangements and sizes, and there's something out there for everyone.
 
 Group living arrangements can be totally [amazing](/blog/2021-03-11-travels), even transformative. I think they provide the best opportunity to make those lifelong friendships you can only have by living intimately together.
 
 ## What to watch out for
 
-What worries me is that I'm seeing a growing reverance for being in specific co-living arrangements, especially in the gen-z demographic. What I mean is this: without pointing names, we can see a social media trend where people publicly share and humble brag about being in a name brand house.
+A concerning recent trend is the use of such houses as an intellectual and social status symbol. We get humble brags:
 
 > Living @REDACTED is absolutely amazing. Just today, we have scheduled a bookclub on Kant, stand up comedy night, and a Iron Chef esque cooking competition. Will probably explore Utah wilderness this weekend as well.
 
-This is worrying because it detracts from what group houses are really meant for. There is nothing special about the mere fact of being in a specific group house. It's a construct formed from having a bunch of people living together under one roof. It's a special experience because of the ideas you learn and the friends you meet and the memories you make, not because it's a shiny badge that should be flaunted around.
+This is worrying because it detracts from the point of group houses. There's nothing special about being in one geographic place over another. The value is in the community, the unique environment you get when you put a cocktail of specific people together under one roof. It's special because of the ideas you learn and the friends you meet and the memories you make. All that dissapears when the house gets decomposed to a "cool place" to live in.
 
-A house that focuses on clout and external validation tends to set a tone that makes it difficult to be authentic and organic. If you are surrounded by people who are in the place just so they can say they have been there, you most likely won't be able to get the level and type of interaction that you'd get with people who want to live, learn, and share alongside you.
+A house that focuses on clout and external validation sets a tone that makes it difficult to be authentic and organic. If you are surrounded by people who are in the place just so they can say they've been there, you most likely won't get much good out of it.
 
 What makes a house is the people within it. If people aren't coming for the experience, then it won't manifest within the house.
 
-To be clear, I am in no way trying to gate-keep the awesome opportunity of group houses. I hope everyone gets to do them, but it should be a truly safe, community oriented experience that is honest with its values and purpose.
+To be clear, in no am I trying to gate-keep the awesome opportunity of group houses. I hope everyone gets to do them, but it should be a truly safe, community oriented experience that is honest with its values and purpose.
 
 When finding housemates, I find that using [The Damn Test](/blog/2021-04-15-damn-test) to be a helpful litmus test on whether I align with someone and would like to live with them.
 
