--- a/pages/blog/2023-07-22-mind-reading.mdx
+++ b/pages/blog/2023-07-22-mind-reading.mdx
@@ -107,8 +107,9 @@ When predicting the category of the image from one of 15 categories (i.e. people
 
 =======
 ![Comparison of Wen results](https://substackcdn.com/image/fetch/w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F1481ec8a-b9ff-4d60-a2bc-32a71c4120d5_520x456.png)
->>>>>>> 534629a (adding content for brain post)
-_For each row, the top shows the example frames seen by 1 subject; the bottom shows the reconstruction of those frames based on the subject's cortical fMRI responses_
+
+> > > > > > > 534629a (adding content for brain post)
+> > > > > > > _For each row, the top shows the example frames seen by 1 subject; the bottom shows the reconstruction of those frames based on the subject's cortical fMRI responses_
 
 So far, projects relied on a very small set of image and fMRI pairs, which made it hard to train powerful models. There were not enough labeled examples, simply because fMRIs scans are notoriously expensive to perform at scale.
 
@@ -138,7 +139,7 @@ The architecture for this new generation of image reconstruction projects usuall
 
 ![Mind-Vis architecture](https://substackcdn.com/image/fetch/w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F57c0740b-dac2-42f7-9098-06fc00f1863e_1600x626.png)
 
-So far, diffusion-based projects generated images from pure noise. What if, instead of diffusing from noise, we could diffuse from a fuzzy image that matches the low-level structural shapes of the image? This would combine the pixel-level performance of Beliy et al’s work with the semantic-level performance of Chen and Lin et al’s work. 
+So far, diffusion-based projects generated images from pure noise. What if, instead of diffusing from noise, we could diffuse from a fuzzy image that matches the low-level structural shapes of the image? This would combine the pixel-level performance of Beliy et al’s work with the semantic-level performance of Chen and Lin et al’s work.
 
 Scotti et al. [^9] did this through [MindEye](https://medarc-ai.github.io/mindeye/), which achieved some breathtaking results.
 
@@ -174,49 +175,29 @@ All in all, this is a very exciting result, because we are seeing the early pote
 
 ## What Might Be Possible in the Future?
 
-<<<<<<< HEAD
 Brain image reconstruction potentially enables whole new paradigms of understanding and communication. However, we should be wary of assigning too much weight to the accuracy of reconstructed images, as fMRI is noisy, and current methods such as Stable Diffusion rely on are probabilistic in nature. Basically, we are very early on this journey.
 
 **But, if we dream, what are some possibilities?**
 
 In the future, imagine controlling the physical world or send messages just by thinking, all without a brain implant. Or what if your thoughts could be privately recorded for you to remember and search through later? What if you could analyze and share dreams? What if we could investigate differences in perception across people, to map phenomena such as personality and attention?
 
-This reality sounds impossible today. But thanks to decades of work in this field, and the future trajectory of current research, this technology could become quite possible in the future. 
+This reality sounds impossible today. But thanks to decades of work in this field, and the future trajectory of current research, this technology could become quite possible in the future.
 
 We are already seeing some interesting first movers in the BCI space. For example, Muse creates proprietary headbands that measure EEG to provide feedback for meditation. MindX makes glasses that track eye movement to control a computer. CTRL-Labs measures muscle twitches as a proxy for neural activity.
 
 The fundamental technology is improving, so it may only be a certain amount of time before we can noninvasively understand the intent of our minds in real-time.
-=======
-Brain image reconstruction potentially enables whole new paradigms of understanding and communication. However, we should be wary of assigning too much weight to the accuracy of reconstructed images, as fMRI data is noisy, and current methods such as Stable Diffusion rely on are probabilistic in nature. Basically, we are very early on this exciting journey.
-
-**But, if we dream, what are some possibilities?**
-
-In the future, what if you could control the physical world or send messages just by thinking, all without a brain implant? Or, what if your thoughts could be privately recorded for you to remember and search through later? What if you could analyze and share dreams? What if we could investigate differences in perception across people, to map phenomena such as personality and attention?
-
-This reality sounds impossible today, especially noninvasively, and it may ultimately prove to be. But, thanks to decades of work in this field, and the trajectory of current research, I believe there are reasons to be optimistic!
->>>>>>> 534629a (adding content for brain post)
 
 ---
 
 ## What Happens Next?
 
-<<<<<<< HEAD
 [Reach out](mailto:contact@jonathanxu.com) if you’re a researcher, engineer, or investor, and would like to collaborate. I'm making the second version of Mind-Vis, implementing some innovations to greatly improve its capabilities. I've also compiled [some resources](/blog/2023-07-22-mind-reading-resources) if you'd like to explore fMRI datasets and opportunities. We’re excited for where this is leading, including learning rich fMRI latents incorporating spatial information, and adapting the architecture to more approachable hardware such as MEGs and EEGs. Thanks for reading!
-=======
-[Reach out](mailto:contact@jonathanxu.com) if you’re a researcher, engineer, or investor, and would like to collaborate. I've also compiled [some resources](https://jonathanxu.com/blog/2023-07-22-mind-reading-resources) if you'd like to explore fMRI datasets and opportunities. We’re excited for where this is leading, including learning rich fMRI latents incorporating spatial information, and adapting the architecture to more approachable hardware such as MEGs and EEGs. Thanks for reading!
->>>>>>> 534629a (adding content for brain post)
 
 ---
 
 ## Thanks
 
-<<<<<<< HEAD
 This post was made in collaboration with [Oliver Cameron](https://twitter.com/olivercameron), you can see it on his [substack](https://olivercameron.substack.com/p/ai-to-interpret-your-mind): Thanks to [Zijiao Chen](https://twitter.com/ZijiaoC) and Jiaxin Qing for their feedback. Thanks to Alyssa for her moral support during these crazy times. And thanks to Ayataka green tea for keeping me awake.
-=======
----
-
-## Sources
->>>>>>> 534629a (adding content for brain post)
 
 [^1]: Kamitani, Y. & Tong, F. Decoding the visual and subjective contents of the human brain. Nature Neurosci. 8, 679–685, 2005.
 [^2]: K. N. Kay, T. Naselaris, R. J. Prenger, and J. L. Gallant, “Identifying natural images from human brain activity,” Nature, vol. 452, pp. 352–355, 3 2008.
@@ -227,8 +208,3 @@ This post was made in collaboration with [Oliver Cameron](https://twitter.com/ol
 [^7]: Lv, Han, et al. "Resting-state functional MRI: everything that nonexperts have always wanted to know." American Journal of Neuroradiology 39.8 (2018): 1390-1399.
 [^8]: Chen, Zijiao, Jiaxin Qing, and Juan Helen Zhou. "Cinematic Mindscapes: High-quality Video Reconstruction from Brain Activity." arXiv preprint arXiv:2305.11675 (2023).
 [^9]: Scotti, Paul S., et al. "Reconstructing the Mind's Eye: fMRI-to-Image with Contrastive Learning and Diffusion Priors." arXiv preprint arXiv:2305.18274 (2023).
-
-<<<<<<< HEAD
-=======
----
->>>>>>> 534629a (adding content for brain post)
