--- a/pages/blog/2023-07-22-mind-reading.mdx
+++ b/pages/blog/2023-07-22-mind-reading.mdx
@@ -11,14 +11,14 @@ export const metadata = {
 
 #### 07/22/2023
 
-There has been some remarkable progress in our ability to reconstruct the thoughts going on inside our own head. The technology today has significant limitations and is far from mature, but it is a glimpse into a future where our mind alone could trigger actions outside our bodies. **If we fast forward the clock a decade or two, what might be possible?**
+There has been some remarkable progress in our ability to reconstruct the thoughts going on inside our own head. The technology today has big limitations and is far from mature, but it is a glimpse into a future where our thoughts are no longer bound within our skulls. **Just imagine what we could do in 5-10 years!**
 
 ![MindEye results](https://substackcdn.com/image/fetch/w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F4f0ea27d-b650-4f68-b6d2-f97ac76c986b_3529x1155.png)
 _Reconstructing the [Mind’s Eye](https://medarc-ai.github.io/mindeye/): fMRI-to-Image with Contrastive Learning and Diffusion Priors_
 
 Above we can see two columns of images. The image on the left—the “seen image”—is a picture that is physically shown to a human. Then, the image on the right—the “reconstruction”—is what a ML model guesses the human saw using just a brain scan as the input. The first reaction of many to this is disbelief. How is it possible that a ML model can interpret what we saw from just a brain scan, and reconstruct such eerily accurate images?
 
-In this post, we’ll go deeper on how these results were achieved and the state-of-the-art in brain image reconstruction. But, first let’s understand the brain, the tools to image it, and the history of those trying to better understand it.
+In this post, we’ll go deeper on how these results were achieved and the state-of-the-art in brain image reconstruction. We'll look at the brain, MRI imaging, and our history of understanding what's going on.
 
 ---
 
@@ -180,15 +180,21 @@ The fundamental technology is improving, so it may only be a certain amount of t
 
 ---
 
+## My work
+
+I'm so excited to be pushing the frontier for fMRI reconstruction. I'm in charge of making the second version of Mind-Vis, and have been implementing some architectural and improvments to make it the new state of the art. There are some exciting devleopments so I'm hoping to publish in a month! On a longer scale, I'll be exploring learning rich fMRI latents incorporating spatial information, and adapting the architecture to more approachable hardware such as MEGs and EEGs.
+
 ## What Happens Next?
 
-[Reach out](mailto:contact@jonathanxu.com) if you’re a researcher, engineer, or investor, and would like to collaborate. I'm making the second version of Mind-Vis, implementing some innovations to greatly improve its capabilities. I've also compiled [some resources](/blog/2023-07-22-mind-reading-resources) if you'd like to explore fMRI datasets and opportunities. We’re excited for where this is leading, including learning rich fMRI latents incorporating spatial information, and adapting the architecture to more approachable hardware such as MEGs and EEGs. Thanks for reading!
+If this stuff strikes your interest and you’re a researcher, engineer, or investor, you're welcome [reach out](mailto:contact@jonathanxu.com)! Always happy to connect to share resources, people and projects. I've also compiled [some resources](/blog/2023-07-22-mind-reading-resources) if you'd like to explore fMRI datasets, papers, and opportunities.
+
+Thanks for reading!
 
 ---
 
 ## Thanks
 
-This post was made in collaboration with [Oliver Cameron](https://twitter.com/olivercameron), you can see it on his [substack](https://olivercameron.substack.com/p/ai-to-interpret-your-mind): Thanks to [Zijiao Chen](https://twitter.com/ZijiaoC) and Jiaxin Qing for their feedback. Thanks to Alyssa for her moral support during these crazy times. And thanks to Ayataka green tea for keeping me awake.
+This post was written in collaboration with [Oliver Cameron](https://twitter.com/olivercameron), you can read it on his [substack](https://olivercameron.substack.com/p/ai-to-interpret-your-mind): Thanks to [Zijiao Chen](https://twitter.com/ZijiaoC) and Jiaxin Qing for their feedback. Thanks to Alyssa for her moral support during these crazy times. And thanks to Ayataka green tea for keeping me awake.
 
 [^1]: Kamitani, Y. & Tong, F. Decoding the visual and subjective contents of the human brain. Nature Neurosci. 8, 679–685, 2005.
 [^2]: K. N. Kay, T. Naselaris, R. J. Prenger, and J. L. Gallant, “Identifying natural images from human brain activity,” Nature, vol. 452, pp. 352–355, 3 2008.
