--- a/pages/blog/2023-07-22-mind-reading-resources.mdx
+++ b/pages/blog/2023-07-22-mind-reading-resources.mdx
@@ -9,13 +9,13 @@ export const metadata = {
   title: "Brain Reconstruction Resources",
   url: "2023-07-22-mind-reading-resources",
   date: "2023-07-23",
-  length: 1,
+  length: 3,
 };
 
 export const datasets = [
   {
     key: "1",
-    name: "Natural Scenes Dataset",
+    name: "OpenNeuro",
     type: "MRI, MEG, EEG, iEEG, and ECoG datasets",
     size: "Free platform for sharing 800+ datasets with 34000+ participants",
     link: "https://openneuro.org//",
