hiding some posts

--- a/pages/blog/2020-12-31-reflections.mdx
+++ b/pages/blog/2020-12-31-reflections.mdx
@@ -1,9 +1,11 @@
-export const metadata = {
-  title: "Reflections on 2020",
-  url: "2020-12-31-reflections",
-  date: "2020-12-31",
-  length: 5,
-};
+{
+// export const metadata = {
+// title: "Reflections on 2020",
+// url: "2020-12-31-reflections",
+// date: "2020-12-31",
+// length: 5,
+// };
+}
 
 # Reflections on 2020
 
