--- a/pages/blog/2021-01-27-stocks.mdx
+++ b/pages/blog/2021-01-27-stocks.mdx
@@ -1,9 +1,11 @@
-export const metadata = {
-  title: "1 year of stonks",
-  url: "2021-01-27-stocks",
-  date: "2021-01-27",
-  length: 12,
-};
+{
+// export const metadata = {
+// title: "1 year of stonks",
+// url: "2021-01-27-stocks",
+// date: "2021-01-27",
+// length: 12,
+// };
+}
 
 # 1 year of stonks
 
