--- a/pages/blog/2021-02-20-china.mdx
+++ b/pages/blog/2021-02-20-china.mdx
@@ -1,9 +1,11 @@
-export const metadata = {
-  title: "Working in Chinese tech",
-  url: "2021-02-20-china",
-  date: "2021-02-20",
-  length: 11,
-};
+{
+// export const metadata = {
+// title: "Working in Chinese tech",
+// url: "2021-02-20-china",
+// date: "2021-02-20",
+// length: 11,
+// };
+}
 
 # Working in Chinese tech
 
