--- a/pages/blog/2021-04-28-group-houses.mdx
+++ b/pages/blog/2021-04-28-group-houses.mdx
@@ -1,11 +1,11 @@
-import { List } from "antd";
-
-export const metadata = {
-  title: "Under one roof",
-  url: "2021-04-28-group-houses",
-  date: "2021-04-28",
-  length: 6,
-};
+{
+// export const metadata = {
+// title: "Under one roof",
+// url: "2021-04-28-group-houses",
+// date: "2021-04-28",
+// length: 6,
+// };
+}
 
 # Under one roof
 
