--- a/pages/blog/2021-12-31-reflection.mdx
+++ b/pages/blog/2021-12-31-reflection.mdx
@@ -1,11 +1,13 @@
 import { Carousel, Card } from "antd";
 
-export const metadata = {
-  title: "2021 Post Mortem",
-  url: "2021-12-31-reflection",
-  date: "2021-12-31",
-  length: 5,
-};
+{
+// export const metadata = {
+// title: "2021 Post Mortem",
+// url: "2021-12-31-reflection",
+// date: "2021-12-31",
+// length: 5,
+// };
+}
 
 # 2021 Post Mortem
 
