--- a/pages/blog/2022-10-19-stanford.mdx
+++ b/pages/blog/2022-10-19-stanford.mdx
@@ -1,11 +1,13 @@
 import { Timeline } from "antd";
 
-export const metadata = {
-  title: "Undercover @ Stanford",
-  url: "2022-10-19-stanford",
-  date: "2022-10-19",
-  length: 15,
-};
+{
+// export const metadata = {
+// title: "Undercover @ Stanford",
+// url: "2022-10-19-stanford",
+// date: "2022-10-19",
+// length: 15,
+// };
+}
 
 # Undercover @ Stanford
 
@@ -47,7 +49,7 @@ Course notes are recorded [here](https://1drv.ms/u/s!AkkQVbX5M5Bliz4y7hE0mD3fqa_
 
 **10/17/2022**
 
-- How to look at art: Themes of melancholy in mundanity and the role of feminine figures over time. I liked *New York Movie* by Edward Hopper
+- How to look at art: Themes of melancholy in mundanity and the role of feminine figures over time. I liked _New York Movie_ by Edward Hopper
 - Lunch with a new friend who is interested in XR
 - Poetry and poetics: Learning about sonnet form: Italian, English, Spenserian sonnets
 - Writing some scripts to split our labelled dataset of 1024x1024 images into tiles of size 32, 64, and 244
@@ -79,7 +81,7 @@ Course notes are recorded [here](https://1drv.ms/u/s!AkkQVbX5M5Bliz4y7hE0mD3fqa_
 
 **10/14/2022**
 
-- Attended The Dualist: Read philosophy paper *Mental Ballistics or the Involuntariness of Spontaneity*. Essentially says that we have autonomy in deciding when we make space for thought, the actual contents of what we think are out of our control.
+- Attended The Dualist: Read philosophy paper _Mental Ballistics or the Involuntariness of Spontaneity_. Essentially says that we have autonomy in deciding when we make space for thought, the actual contents of what we think are out of our control.
 - Lab meeting #2: Syncing up to hear about the progress of other teams working on BMI analysis, brick furnace detection.
 - Talking with lab supervisor about my harvest piles project: we realize that our satellite imagery resolution is too low to have enough training data.
 - Joined a student-run class: Intro to AI alignment. A very key topic in a field I'm learning more about - excited to learn about my true unknowns!
@@ -125,7 +127,7 @@ Course notes are recorded [here](https://1drv.ms/u/s!AkkQVbX5M5Bliz4y7hE0mD3fqa_
 
 - How to look at art: Exploring the theme of stars in artwork. Our relationship to the cosomos, theology and life and the symbolism of the tiny white speck
 - Chatted with Gabe, who runs Stanford AI Alignment. Am excited to see if we can get some resources to start some similar initiative @ Waterloo
-- Poetry and poetics: Metres and rhythm in poetry. Read *To a Poor Old Woman* by William Carlos Williams
+- Poetry and poetics: Metres and rhythm in poetry. Read _To a Poor Old Woman_ by William Carlos Williams
 - Sat in a politics class to discover that Hillary Clinton was doing an interview on Zoom
 - Finished up the CNN Coursera course
 
