--- a/pages/blog/2022-12-29-reflection.mdx
+++ b/pages/blog/2022-12-29-reflection.mdx
@@ -1,11 +1,13 @@
 import { Carousel, Card } from "antd";
 
-export const metadata = {
-  title: "New Years Inflection",
-  url: "2022-12-29-reflection",
-  date: "2022-12-29",
-  length: 6,
-};
+{
+// export const metadata = {
+// title: "New Years Inflection",
+// url: "2022-12-29-reflection",
+// date: "2022-12-29",
+// length: 6,
+// };
+}
 
 # New Years Inflection
 
@@ -38,18 +40,18 @@ Such as when you meet someone younger than you, and learn that they are now 10x 
 ![cover](/images/2022-12-29-reflection/motive.jpg)
 _Lake Tahoe_
 
-My hunch is that perhaps inspiration stems from a wonder with the world outside ourselves. That excitement to create, to love like never before, to tread a fresh path, and trying to be fully immersed in the beauty of the present - maybe that's inspiration. 
+My hunch is that perhaps inspiration stems from a wonder with the world outside ourselves. That excitement to create, to love like never before, to tread a fresh path, and trying to be fully immersed in the beauty of the present - maybe that's inspiration.
 
 A litmus test to figure out whether you are actually inspired by someone, or just jealous, might be to ask yourself: "Am I looking up to this person because of their character or their accomplishments?"
 
 Regardless, I'd like to work towards a platonic ideal of an inspired life, and adjust course as I figure out what that really means. But right now it points towards work on my agency to explore interactions with others, artistic expression, and meaningful work.
 
 Some tricks I'll try:
+
 - use a playful attitude on life
 - try old things in new ways
 - practice expression over tecnique (compensating for the way I currently do things)
 - enjoy things as if it were the first time you're doing it
-
 
 ## Thanks
 
