--- a/pages/blog/2021-03-11-travels.mdx
+++ b/pages/blog/2021-03-11-travels.mdx
@@ -1,11 +1,13 @@
 import { Carousel, Typography } from "antd";
 
-export const metadata = {
-  title: "6 months and 3 countries",
-  url: "2021-03-11-travels",
-  date: "2021-03-11",
-  length: 10,
-};
+{
+// export const metadata = {
+// title: "6 months and 3 countries",
+// url: "2021-03-11-travels",
+// date: "2021-03-11",
+// length: 10,
+// };
+}
 
 # 6 months and 3 countries
 
