--- a/pages/blog/2022-03-02-school.mdx
+++ b/pages/blog/2022-03-02-school.mdx
@@ -1,9 +1,11 @@
-export const metadata = {
-  title: "Coming back to school",
-  url: "2022-03-02-school",
-  date: "2022-03-02",
-  length: 6,
-};
+{
+// export const metadata = {
+// title: "Coming back to school",
+// url: "2022-03-02-school",
+// date: "2022-03-02",
+// length: 6,
+// };
+}
 
 # Coming back to school
 
