--- a/pages/blog/2022-11-05-stanford-waterloo.mdx
+++ b/pages/blog/2022-11-05-stanford-waterloo.mdx
@@ -1,9 +1,11 @@
-export const metadata = {
-  title: "The Ivory Tower and the Concrete Basement: Personal observations between Stanford and Waterloo",
-  url: "2022-11-05-stanford-waterloo",
-  date: "2022-11-05",
-  length: 10,
-};
+{
+// export const metadata = {
+// title: "The Ivory Tower and the Concrete Basement: Personal observations between Stanford and Waterloo",
+// url: "2022-11-05-stanford-waterloo",
+// date: "2022-11-05",
+// length: 10,
+// };
+}
 
 # The Ivory Tower and the Concrete Basement: Personal observations between Stanford and Waterloo
 
@@ -13,9 +15,10 @@ export const metadata = {
 
 When I was [at Stanford](/blog/2022-10-19-stanford) doing research for Sustain Lab, my experience at the elite private college was a stark contrast from my time at Waterloo. I was broadly aware of some differences when walking through [Stanford](https://youtu.be/jCWwxiPxsEw) and [Waterloo](https://youtu.be/SPk14LZFT1o), but this past month really opened my eyes to nuance of each school. The purpose of this post is to share my most striking observations with my fellow Waterloo friends and to hopefully spark some discussion about the topic.
 
-Disclaimer: My observations are limited only to the situations that I have personally been in, which is a small silver of the entire Stanford and Waterloo (CS and Engineering) experience. They make sense within this context, but I make no tautologies about the expeirence for all students in all school departments. 
+Disclaimer: My observations are limited only to the situations that I have personally been in, which is a small silver of the entire Stanford and Waterloo (CS and Engineering) experience. They make sense within this context, but I make no tautologies about the expeirence for all students in all school departments.
 
 ### Grades
+
 Private institutions are not a meritocracy. You get accepted for a combination of privilege, luck, and hard work. Admissions mostly care more about your essays than your high school grades. Once you're in, it's really hard to fail out. I was sitting in the CS 148 lecture, and the difference was stark. The professor was very vocal in saying that he understood the pressures of the student schedule, and straight up offered to accept the final project months after the term ended. Students say that Stanford coddles you - if you need an accomodation it will be made for you. I know a friend who actually got the school to make a unique degree just for him - he used it to graduate early with his bio + cs course credits.
 
 This is unheard of in Waterloo! The system is rigid and one-dimensional - you either submit your assignment by 11:59 or you do not and you fail with no exceptions. From start to finish, you are evaluated based on your adherance to very measurable units - you are admitted based on your high school average, and you graduate based on if you perfectly fulfill your course requirement. I'm not saying that this is a bad thing, but it's a stark contrast to the private system. The Waterloo education trains you to be a good employee that works within deadlines and restrictions, the Stanford education trains you to expect the world to cater to your needs.
@@ -33,7 +36,7 @@ Waterloo as we know it is mostly a vocational school. Most of the students come 
 
 At Waterloo I've kind of gotten used to not expecting much from my instructors. Some of them are quite engaging, but for most of my classes I get the feeling that the instructor is simply reading the slides, kind of like a worse version of a Coursera video where you can't 2x the speed. The result is that I end up skipping classes and self-studying the slides and textbook on my own. Most casses are large (>100 people) and the focus is on measurables and deliverables, making it feel like I'm the product of an industrial credential factory.
 
-The bar at Stanford is on another level - which kind of makes sense given that you pay 80k a year versus my 15k/yr Waterloo tuition. Some of the classes like Arthist 1B: *How to Look at Art and Why* truly make you appreciate good teaching. You get the feeling that the lecturers truly care about teaching you their craft, that they **enjoy** what they do and are very good at it. I was in a few lectures that were so captivating and inspiring that when they ended the class gave a round of applause to the professor. I'm not sure about the specific ratio but a significant chunk of the lecturers are at the top of their field - nobel laureats, Pulitzer prize winners, flagship researchers befitting the Stanford brand. Class sizes range from a dozen people to the hundreds, but the majority of them are small (\<50 people). You feel like an actively participating student, where your presence is valued and your questions are welcomed. The result is that I actually look forward to going to class, and I'm not the only one - it's cool to hear about how much my Stanford friends look forward to their favorite classes.
+The bar at Stanford is on another level - which kind of makes sense given that you pay 80k a year versus my 15k/yr Waterloo tuition. Some of the classes like Arthist 1B: _How to Look at Art and Why_ truly make you appreciate good teaching. You get the feeling that the lecturers truly care about teaching you their craft, that they **enjoy** what they do and are very good at it. I was in a few lectures that were so captivating and inspiring that when they ended the class gave a round of applause to the professor. I'm not sure about the specific ratio but a significant chunk of the lecturers are at the top of their field - nobel laureats, Pulitzer prize winners, flagship researchers befitting the Stanford brand. Class sizes range from a dozen people to the hundreds, but the majority of them are small (\<50 people). You feel like an actively participating student, where your presence is valued and your questions are welcomed. The result is that I actually look forward to going to class, and I'm not the only one - it's cool to hear about how much my Stanford friends look forward to their favorite classes.
 
 ### Mindsets
 
@@ -47,7 +50,7 @@ I'm really glad I got to experience these two schools for myself! They serve as 
 
 For their own intents and purposes, the schools do well at what they were made for. High schoool me wanted a recognizable diploma and good work experience at a very affordable price, and Waterloo was perfect for that. As I'm now gravitating towards a more idealistic persuit of learning and growth, I think it makes sense to [audit](https://onedrive.live.com/redir?resid=659033F9B5551049%211470&authkey=%21ADLuETSYPd-pr-o&page=View&wd=target%28Stanford%2FCS248.one%7C72e74e63-a796-4271-9779-b7d2e3212a5d%2FCS248%7Cebdc4805-fc6c-4621-a4d4-2e1d0471276e%2F%29&wdorigin=NavigationUrl) Stanford's [courses](https://explorecourses.stanford.edu/) as a hack to get a world-class education for free.
 
-I wouldn't want to wring my hands too much over which college I should have gone to - though college years are quite formative I think it is more important to develop a value system and identity that is resilient to whichever environment or institution I find myself in. 
+I wouldn't want to wring my hands too much over which college I should have gone to - though college years are quite formative I think it is more important to develop a value system and identity that is resilient to whichever environment or institution I find myself in.
 
 ---
 
