--- a/pages/projects/brett.mdx
+++ b/pages/projects/brett.mdx
@@ -2,6 +2,8 @@ import { Carousel } from "antd";
 
 # Brett
 
+### October 2019
+
 ![cover img](/images/projects/brett/banner.png)
 
 Brett is a fire detection and mapping drone I built in early 2020. It was done as part of the NXP Hovergames Challenge on [Hackster.io](https://www.hackster.io/jonathan-xu/brett-the-fire-mapping-drone-94fc1c). The drone is capable of flying autonomously along a predefined area, while taking photos and infrared readings, that get stitched together into one final picture. This definitely is one of the more ambitious hardware projects I've attempted.
