--- a/pages/projects/hand.mdx
+++ b/pages/projects/hand.mdx
@@ -6,4 +6,16 @@ import { Carousel } from "antd";
 
 ![cover img](/images/projects/hand/banner.JPG)
 
+<Carousel autoplay>
+  <img src="/images/projects/hand/DSC00017.jpg" />
+  <img src="/images/projects/hand/IMG_0754.jpg" />
+  <img src="/images/projects/hand/IMG_0756.jpg" />
+  <img src="/images/projects/hand/IMG_0935.jpg" />
+  <img src="/images/projects/hand/IMG_1120.jpg" />
+  <img src="/images/projects/hand/IMG_1206.jpg" />
+  <img src="/images/projects/hand/IMG_1222.jpg" />
+  <img src="/images/projects/hand/IMG_1232.jpg" />
+  <img src="/images/projects/hand/tired.jpg" />
+</Carousel>
+
 ---
